# mcp-gateway

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp-gateway-v3-f643de.md  pyproject.toml
.github/workflows/: ghcr.yml
config/: mcpServers.json
gateway/: __init__.py  config.py  health.py  loader.py  logging.py  main.py  namespace.py  proxy.py  reconnect.py  reload.py
gateway/transports/: __init__.py  sse.py  stdio.py  streamable_http.py  websocket.py
tests/: test_loader.py  test_namespace.py  test_proxy_integration.py
