[project]
name = "mcp-gateway"
version = "0.1.0"
description = "FastMCP-based streamable-HTTP MCP gateway aggregating multiple upstream MCP servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.0",
    "mcp>=1.9.2",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-gateway = "gateway.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
